plugins {
  id 'application'
  id 'pmd'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.0.13.RELEASE'
  id 'org.springframework.boot' version '2.5.14'
  id 'uk.gov.hmcts.java' version '0.12.12'
  id 'com.github.ben-manes.versions' version '0.39.0'
  id 'org.owasp.dependencycheck' version '7.1.2'
  id 'org.sonarqube' version '3.3'
  id 'au.com.dius.pact' version '4.2.14'
  id 'io.freefair.lombok' version '5.3.3.3'
  id "info.solidsoft.pitest" version '1.7.0'
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

sourceCompatibility = 11
targetCompatibility = 11

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output + test.output
      runtimeClasspath += main.output + test.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output + test.output
      runtimeClasspath += main.output + test.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output + test.output
      runtimeClasspath += main.output + test.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }
  contractTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      java.srcDir 'src/contractTest/java'
      resources.srcDir 'src/contractTest/resources'
    }
    resources.srcDir file('src/contractTest/resources')
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs << '-parameters' << '-Xlint:deprecation' << "-Xlint:unchecked"
}

test {
  useJUnitPlatform()
}

task functional(type: Test) {
  //useJUnitPlatform()
  // The above has been left as commented to highlight a problem. The build was failing on the functional tests stating
  //  that there was no functional test. The fix was found in the following:
  // https://stackoverflow.com/questions/57795263/test-events-were-not-received-when-run-tests-using-intellij
  maxParallelForks = 1
  group = 'verification'
  description = 'Executes non-destructive functional tests in AAT against a running CCD and evidence share service'
  setTestClassesDirs(sourceSets.functionalTest.output.classesDirs)
  setClasspath(sourceSets.functionalTest.runtimeClasspath)
  include "uk/gov/hmcts/reform/sscs/functional/**"
}

task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath

}

task smoke(type: Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

task fortifyScan(type: JavaExec)  {
  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

configurations {
  functionalTestCompile.extendsFrom(testCompile)
  functionalTestRuntime.extendsFrom(testRuntime)
  integrationTestCompile.extendsFrom(testCompile)
  integrationTestRuntime.extendsFrom(testRuntime)
  smokeTestCompile.extendsFrom(testCompile)
  smokeTestRuntime.extendsFrom(testRuntime)
  testCompile.exclude module: "android-json"
  testRuntime.exclude module: "android-json"
  integrationTestCompile.exclude module: "android-json"
  integrationTestRuntime.exclude module: "android-json"

  contractTestCompile.extendsFrom testCompile
  contractTestRuntime.extendsFrom testRuntime
}

pmd {
  toolVersion = "6.9.0"
  ignoreFailures = true
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
  reportsDir = file("$project.buildDir/reports/pmd")
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.enabled = true
    csv.enabled = false
    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}

pitest {
  targetClasses = ['uk.gov.hmcts.reform.sscs.service.*']
  excludedClasses = ['uk.gov.hmcts.reform.sscs.config.*',
                     'uk.gov.hmcts.reform.sscs.domain.*',
                     'uk.gov.hmcts.reform.sscs.exception.*',
                     'uk.gov.hmcts.reform.sscs.factory.*',
                     'uk.gov.hmcts.reform.sscs.health.*',
                     'uk.gov.hmcts.reform.sscs.model.*',
                     'uk.gov.hmcts.reform.sscs.SscsEvidenceShareApplication']
  excludedMethods = ['equals', 'hashcode']
  jvmArgs = ['-Xms1G','-Xmx3G']
  enableDefaultIncrementalAnalysis = true
  historyInputLocation = 'build/reports/pitest/fastermutationtesting'
  historyOutputLocation = 'build/reports/pitest/fastermutationtestingoutput'
  threads = 20
  verbose = true
  outputFormats = ['XML', 'HTML']
  timestampedReports = false
  mutationThreshold = 75
}

project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
check.dependsOn integration
checkstyleMain.shouldRunAfter(compileJava)
test.shouldRunAfter(checkstyleTest)
integration.shouldRunAfter(checkstyleIntegrationTest)
integration.shouldRunAfter(test)
functional.shouldRunAfter(checkstyleIntegrationTest)
functional.shouldRunAfter(test)

sonarqube {
  properties {
    property "sonar.exclusions",
      "src/main/java/uk/gov/hmcts/reform/sscs/config/**," +
        "src/main/java/uk/gov/hmcts/reform/sscs/servicebus/messaging/**," +
        "src/main/java/uk/gov/hmcts/reform/sscs/domain/**," +
        "src/main/java/uk/gov/hmcts/reform/sscs/model/**," +
        "src/main/java/uk/gov/hmcts/reform/sscs/docmosis/domain/**," +
        "src/main/java/uk/gov/hmcts/reform/sscs/docmosis/config/**," +
        "src/main/java/uk/gov/hmcts/reform/sscs/SscsEvidenceShareApplication.java,"
    property "sonar.projectName", "Reform :: sscs-evidence-share"
    property "sonar.projectKey", "uk.gov.hmcts.reform:sscs-evidence-share"
    property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    property "sonar.host.url", "https://sonar.reform.hmcts.net/"
  }
}

dependencyUpdates.resolutionStrategy {
  componentSelection { rules ->
    rules.all {
      def isNonStable = { String version ->
        def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
        def regex = /^[0-9,.v-]+(-r)?$/
        return !stableKeyword && !(version ==~ regex)
      }
      if (isNonStable(candidate.version) && !isNonStable(currentVersion)) {
        selection.reject('Release candidate')
      }
    }
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  // If we set a dedicated environment variable to 'false' to be lax in our build standards, then we won't fail the build,
  //  otherwise we are strict in our build and fail it.
  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'false' ? 11 : 7.0
  cveValidForHours = 4 // on Jenkins we have 24, so if you get more vulnerabilities locally, try to normalize this value with Jenkins
  suppressionFile = 'config/owasp/suppressions.xml'

  analyzers {
    retirejs {
      enabled = false
    }
    ossIndex {
      enabled = false
    }
  }
}

repositories {

  mavenLocal()
  mavenCentral()
  jcenter()

  // jitpack should be last resort
  // see: https://github.com/jitpack/jitpack.io/issues/1939
  maven { url 'https://jitpack.io' }
  maven {
    url 'https://repo.spring.io/libs-milestone'
  }
}

project.ext {
  pacticipant = 'sscs_evidenceShare'
  pacticipantVersion = getCheckedOutGitCommitHash()
}

def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --shirt HEAD'.execute().text.trim()
}

task runContractTests(type: Test, description: 'Runs contract tests.', group: 'Verification') {
  onlyIf {
    return System.env.SKIP_CONTRACT_TESTS == null || System.env.SKIP_CONTRACT_TESTS == 'false'
  }
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
  systemProperty 'pact.rootDir', "pacts"
  testLogging.showStandardStreams = true
}

task runAndPublishConsumerPactTests(type: Test, description: 'Publish pact test to broker.', group: 'Verification') {
  logger.lifecycle("Runs pact consumer Tests")

  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
}

runAndPublishConsumerPactTests.finalizedBy pactPublish

pact {
  broker {
    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
  }
  publish {
    pactDirectory = 'pacts'
    tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
    version = project.pacticipantVersion
  }
}

// it is important to specify logback classic and core packages explicitly as libraries like spring boot
// enforces it's own (older) version which is not recommended.
def versions = [
  junit           : '5.8.1',
  junitPlatform   : '1.8.1',
  springBoot: springBoot.class.package.implementationVersion,
  springfoxSwagger: '2.9.2',
  lombok: '1.18.22',
  restAssured: '4.3.1',
  pact_version: '4.1.7',
  pitest          : '1.4.2',
  gradlePitest    : '1.3.0',
  sonarPitest     : '0.5',
  jackson : '2.13.4'
]

configurations.all {
  resolutionStrategy {
    eachDependency { DependencyResolveDetails details ->
      if (details.requested.group == 'org.codehaus.groovy') {
        // CVE-2020-17521
        details.useVersion "3.0.7"
        details.because "needed by rest-assured>=4.3"
      }
    }
  }
}

ext.libraries = [
  junit5: [
    "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
    "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
    "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
    "org.junit.vintage:junit-vintage-engine:${versions.junit}",
    "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
    "org.junit.platform:junit-platform-engine:${versions.junitPlatform}",
  ]
]

dependencies {
  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
  compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
  compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation'

  compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
  compile group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  compile group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
  compile group: 'io.rest-assured', name: 'json-path', version: versions.restAssured
  compile group: 'io.rest-assured', name: 'xml-path', version: versions.restAssured
  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '7.16.3'

  compile group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
  compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.1.0'
  compile group: 'com.github.hmcts', name: 'java-logging', version: '5.1.7'
  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.9.RELEASE'
  // For the below: https://stackoverflow.com/questions/64994034/bootstrap-yml-configuration-not-processed-anymore-with-spring-cloud-2020-0
  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap'

  compile group: 'org.springframework', name: 'spring-jms'
  compile group: 'org.apache.qpid', name: 'qpid-jms-client', version: '1.3.0'

  compile group: 'uk.gov.hmcts.reform', name: 'send-letter-client', version: '3.0.3'
  compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'

  compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.18.0-SSCS-10917-RC-2'
  compile group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.4.56'

  //Remove when our dependencies pull in this version or later
  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson

  compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.10.2'

  compile group: 'org.pitest', name: 'pitest', version: versions.pitest
  compile group:'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
  compile group:'org.codehaus.sonar-plugins', name:'sonar-pitest-plugin', version: versions.sonarPitest


  testImplementation libraries.junit5
  testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
  testCompile group: 'com.github.hmcts', name: 'fortify-client', version: '1.2.2', classifier: 'all', {
    exclude group: 'commons-io', module: 'commons-io'
  }
  compile group: 'commons-io', name: 'commons-io', version: '2.11.0'

  testCompile 'pl.pragmatists:JUnitParams:1.1.1'
  testCompile group: 'org.mockito', name: 'mockito-core', version: '4.0.0'
  testCompile group: 'io.github.artsok', name: 'rerunner-jupiter', version: '2.1.6'
  testCompile group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.1'

  compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
  annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok

  // Contract Tests
  contractTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact_version
  contractTestCompile group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact_version
  contractTestCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.6.3'
  contractTestCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit_jupiter
  contractTestRuntime group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: versions.junit_jupiter
  contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junit_jupiter
  contractTestRuntime group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.8.1'
  contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
  contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-netflix-ribbon', version: '2.2.9.RELEASE'

  contractTestImplementation sourceSets.main.runtimeClasspath
  contractTestImplementation sourceSets.test.runtimeClasspath
}

dependencyManagement {
  dependencies {
    dependency group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
    dependency group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.18.0'
    dependency group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.18.0'

    //CVE-2021-40690
    dependency group: 'org.apache.santuario', name: 'xmlsec', version: '2.3.0'

    // resolves: CVE-2019-10101, CVE-2019-10102, CVE-2019-10103
    dependencySet(group: 'org.jetbrains.kotlin', version: '1.5.31') {
      entry 'kotlin-stdlib'
    }

    // CVE-2020-13934, CVE-2020-13935 Java and Command Line injections in Windows
    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.65') {
      entry 'tomcat-embed-core'
      entry 'tomcat-embed-el'
      entry 'tomcat-embed-websocket'
    }

    // solves CVE-2019-12086
    // remove once spring manager incorporates this changes
    dependencySet(group: 'com.fasterxml.jackson.core', version: versions.jackson) {
      entry 'jackson-core'
      entry 'jackson-databind'
    }

    // CVE-2019-16869 - brought in by qpid-jms-client
    dependencySet(group: 'io.netty', version: '4.1.79.Final') {
      entry 'netty-handler'
      entry 'netty-transport-native-epoll'
      entry 'netty-transport-native-kqueue'
      entry 'netty-codec-http'
      entry 'netty-codec'
      entry 'netty-transport-native-unix-common'
      entry 'netty-transport'
      entry 'netty-buffer'
      entry 'netty-resolver'
      entry 'netty-common'
    }

    //to remove CVE-2018-10237
    dependencySet(group: 'com.google.guava', version: '31.0.1-jre') {
      entry 'guava'
    }

    // CVE-2020-5408
    dependencySet(group: 'org.springframework.security', version: '5.7.2') {
      entry 'spring-security-crypto'
    }

    //CVE-2021-27807
    dependencySet(group: 'org.apache.pdfbox', version: '2.0.24') {
      entry 'pdfbox-tools'
      entry 'preflight'
    }

    dependencySet(group: 'org.apache.xmlgraphics', version: '1.14') {
      entry 'batik-all'
    }

    //CVE-2021-27568
    dependencySet(group: 'net.minidev', version: '2.4.7') {
      entry 'json-smart'
      entry 'accessors-smart'
    }

    //CVE-2021-30468
    dependencySet(group: 'org.apache.cxf', version: '3.5.0') {
      entry 'cxf-core'
      entry 'cxf-rt-frontend-jaxrs'
      entry 'cxf-rt-rs-client'
      entry 'cxf-rt-security'
      entry 'cxf-rt-transports-http'
    }

    //CVE-2021-35515, CVE-2021-35516, CVE-2021-35517, CVE-2021-36090
    dependency group: 'org.glassfish', name: 'jakarta.el', version: '4.0.2'

    //CVE-2021-35515, CVE-2021-35516, CVE-2021-35517, CVE-2021-36090
    dependency group: 'org.apache.commons', name: 'commons-compress', version: '1.21'


    //CVE-2022-25857, CVE-2022-38751
    dependencySet(group: 'org.yaml', version: '1.32') {
        entry 'snakeyaml'
    }

    imports {
      mavenBom "org.springframework.cloud:spring-cloud-dependencies:2020.0.6"
    }
  }
}

// this is required to force Java running on the Azure Windows Server OS into using
// UTF-8 as the default character set instead of windows-1252 which causes issues
applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]

run {
  def debug = System.getProperty("debug")
  if (debug == 'true') {
    jvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5006']
  }
}

mainClassName = 'uk.gov.hmcts.reform.sscs.SscsEvidenceShareApplication'

bootJar {
  getArchiveFileName().set(provider {
    'sscs-evidence-share.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}
